--- a/ImageGallery.Client/ImageGallery.Client.csproj
+++ b/ImageGallery.Client/ImageGallery.Client.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.25" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ImageGallery.Model\ImageGallery.Model.csproj" />
   </ItemGroup>
 
