--- a/ImageGallery.Client/ImageGallery.Client.csproj
+++ b/ImageGallery.Client/ImageGallery.Client.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityModel.AspNetCore" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.25" />
   </ItemGroup>
 
